--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "moment": "^2.24.0",
+    "loglevel": "^1.6.8",
+    "prop-types": "^15.7.2",
+    "webrtc-adapter": "^7.7.0",
+    "react-player": "^2.7.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "microbundle-crl": "^0.13.10",
@@ -45,7 +51,13 @@
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "loglevel": "^1.6.8",
+    "moment": "^2.24.0",
+    "webrtc-adapter": "^7.7.0",
+    "react-player": "^2.7.0",
+    "socket.io-client": "^2.3.0",
+    "prop-types": "^15.7.2"
   },
   "files": [
     "dist"
