--- a/package.json
+++ b/package.json
@@ -23,6 +23,14 @@
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
   },
+  "dependencies": {
+    "moment": "^2.24.0",
+    "loglevel": "^1.6.8",
+    "prop-types": "^15.7.2",
+    "webrtc-adapter": "^7.7.0",
+    "react-player": "^2.7.0",
+    "socket.io-client": "^2.3.0"
+  },
   "peerDependencies": {
     "react": "^16.0.0",
     "moment": "^2.24.0",
